Fixed controls in group view being invisible but clickable.
.isNew elements were given opacity: 0, thus invisible but still clickable in the empty group. Group name could be set and empty group can be deleted by clicking the invisible controls. display: none; is now used over opacity so they are not accessible.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -126,7 +126,7 @@ form.baker #assertion {
 }
 
 .group.isNew input.groupName {
-  opacity: 0;
+  display: none;
 }
 
 .group input.groupName:hover, .group input.groupName.hover {
@@ -197,7 +197,7 @@ form.baker #assertion {
   top: 6px;
 }
 .group.isNew .icon {
-  opacity: 0;
+  display: none;
 }
 
 .group .icon:hover {
@@ -294,7 +294,7 @@ form.baker #assertion {
 }
 
 .group.isNew .public {
-  opacity: 0;
+  display: none;
 }
 
 [draggable=true] {
